[package]
name = "xnode-deployer"
description = "Deploy new Xnodes on several hardware providers"
version = "1.0.3"
edition = "2024"
repository = "https://github.com/Openmesh-Network/xnode-deployer"
license = "MIT"

[dependencies]
log = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1"

[features]
default = []         # ["all"]
all = ["hivelocity"]
hivelocity = []
